# light_transport

./: .gitignore  Cargo.toml
src/: app.rs  geometry.rs  image.rs  main.rs  material.rs  math.rs  renderer.rs
tests/: plot3d.py  random_on_hemisphere.csv  random_on_sphere.csv
