[package]
name = "light_transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = {version = "0.18.0", features = ["puffin"]}
egui_glow = "0.18.0"
glow = "0.11"
rand = "*"
puffin = "0.13.3"
puffin_egui = "0.16"
crossbeam = "0.8"
num_cpus = "1.13"
