[package]
name = "light_transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = {version = "0.19", features = []}
egui_glow = "0.19"
glow = "0.11"
rand = "*"
crossbeam = "0.8"
num_cpus = "1.13"
num = "0.4"
